# movebeam

./: Cargo.toml  dist-manifest.json  flake.nix
src/: cli.rs  config.rs  input_listener.rs  lib.rs  msg.rs  socket.rs
