[package]
name = "movebeam"
version = "0.1.0"
edition = "2021"
default-run = "movebeam"

[lib]
name = "movebeam"

[[bin]]
name = "movebeam"

[[bin]]
name = "movebeam-cli"

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
bincode = { version = "2.0.0-rc.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
dirs = "4.0"
crossbeam-channel = "0.5"
signal-hook = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
notify-rust = "4.7"
evdev = { version = "0.12", features = ["tokio"] }
tokio = { version = "1", features = ["rt"] }
tokio-stream = "0.1"
thiserror = "1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
