[package]
name = "movebeam"
version = "0.0.5"
edition = "2021"
default-run = "movebeam"

[lib]
name = "movebeam"

[[bin]]
name = "moved"

[[bin]]
name = "actived"

[[bin]]
name = "movebeam"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.12"
dirs = "5.0"
crossbeam-channel = "0.5"
signal-hook = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
notify-rust = "4.11"
evdev = { version = "0.12", features = ["tokio"] }
tokio = { version = "1.37", features = ["rt"] }
tokio-stream = "0.1"
thiserror = "1.0"
base64 = "0.22"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
